Conexão docker, criação de backup base e login user funcionando sem a criação de roles para toda inserção.